style.css
/* Base styles */
body {
    height: 100vh;
    width: 100vw;
    background-color: black;
    margin: 0;
    overflow: hidden;
}

/* Main section */
main {
    background-image: url("png/FilmPic1.png");
    background-position: center 0%; /* horizontal center */
    background-size: cover;
    height: 100vh; /* take up 77% of the screen */
    width: 100vw;
    position: fixed;
    z-index: 2; /* sandwich between nav toggle and nav menu */

    /* Transition for smooth transform */
    transition: transform 500ms cubic-bezier(.13, .53, .38, .97);
}

/* Navigation */

/* nav bar container */
nav {
    height: 33vh; /* nearly half page */
    width: 100vw;
    position: fixed;
    bottom: 0vh;
    z-index: 1; /* bottom layer */
}

.custom-cursor {
    position: fixed;
    display: none;
    width: 2vw;
    height: 2vw;
    border: .2vw solid black;
    background-color: rgba(210, 232, 245, .5);
    border-radius: 50%;
    pointer-events: none;
    z-index: 9999;
}


/* Navigation links container */
#nav-links {
    background-color: grey;
    height: 33vh;
    width: 100vw;
    display: flex;
    justify-content: space-around;
    align-items: center;
    bottom: 0;
    /* Transform and transition for smooth reveal of navigation links */
    transform: translateY(100%) scale(.87); /* start it off right under the screen */
    transition: transform 500ms cubic-bezier(.13, .53, .38, .97);
}

/* Navigation link button */
#nav-links > .nav-link {
    max-width: calc(95vw / 3);
    max-height: 33vh;
    background: none;
    border: none;
    cursor: pointer;
    outline: none;
    text-decoration: none; /* remove underline */

    display: flex;
    flex-direction: column; /* stack items vertically */
    justify-content: center; /* THIS IS THE CENTER */
    align-items: center; /* align column center */

    padding: 1vh;
}

/* Navigation link label */
#nav-links > .nav-link > .nav-link-label {
    color: white;
    font-family: Avenir, sans-serif;
    font-size: 1.17vh;
    text-transform: lowercase;
    letter-spacing: 3px; /* space between letters */
}

/* Navigation link image */
#nav-links > .nav-link > .nav-link-image {
    width: calc(90vw / 3.5); /* width of elements */
    max-height: calc(90vh / 3.5);
    aspect-ratio: 1.77;
    border-radius: 0.7vh;
    object-fit: cover; /* keep that thang proportional */
}

/* Navigation toggle button */
#nav-toggle {
    height: 5rem;
    width: auto;
    position: fixed;
    aspect-ratio: 1.77;
    z-index: 3; /* sit on top */
    left: 50%; /* center in page */
    bottom: 3vh; /* space to bottom */
    transform: translateX(-50%); /* center in page */
    background-color: rgba(255, 255, 255, .5);
    border: none;
    border-radius: 5rem;
    outline: none;
    box-shadow: 0 0 4vh rgba(0 0 0 / 37%);
    cursor: pointer;

    /* Transitions for smooth hover and active states */
    transition: transform, background-color; /* trans transform & bg color */
    transition-timing-function: ease;
    transition-duration: 800ms;
}

/* Animate hover and click on menu toggle  */
#nav-toggle:hover {
    transform: translateX(-50%) scale(1.04);
}


/* child element: image in menu toggle */
#nav-toggle > img {
    width: 2vmin;
    height: auto;
    aspect-ratio: initial;
    position: fixed;
    left: 50%;
    top: 50%; /* center */
    transform: translate(-50%, -50%) scale(0.9);
    opacity: 0; /* default to invisible */

    /* Transition for smooth reveal of icons */
    transition: transform, opacity;
    transition-timing-function: ease;
    transition-duration: 800ms;
}

/* Image track container */
.image-track {
    pointer-events: none; /* no interactions with track */
    display: flex;
    gap: 4vmin; /* spacing between inner parts */
    position: absolute;
    left: 50%;
    bottom: -100%;
    height: 56vmin;
    transform: translate(0, -50%);
    user-select: none; /* Prevent image highlighting */
    z-index: 4;
    transition: bottom 1100ms cubic-bezier(.83, .3, .38, .97), transform 1100ms cubic-bezier(.83, .3, .38, .97);
}

/* Images inside image track */
.image-track .image {
    width: 40vmin; /* 40% of smaller of w/h */
    height: 56vmin;
    object-fit: cover;
    object-position: 100% center;
    pointer-events: auto;
}

.image-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2vmin;
    position: relative;
    height: 56vmin;
}

.label {
    font-family: Avenir, sans-serif;
    font-style: italic;
    font-weight: lighter;
    color: cadetblue;
    font-size: clamp(20px, 2vmin, 4vmin);
    text-decoration: none;
    text-transform: lowercase;
    letter-spacing: .5vmin;
}

/* BUTTON CHANGES */

/* Change to open up on hover */
body:not([data-nav="true"]) > #nav-toggle:hover > .openUp {
    opacity: 1;
    transform: translate(-50%, -50%);
}

/* Change to done when nav open*/
body[data-nav="true"] > #nav-toggle > .done {
    opacity: 1;
    transform: translate(-50%, -50%);
}

/* remove done symbol when nav item clicked */
body[data-nav="true"][data-button-clicked="true"] #nav-toggle > .done {
    display: none;
}

/* Change to open down when nav item clicked */
body[data-button-clicked="true"] #nav-toggle > .openDown {
    opacity: 1;
    transform: translate(-50%, -50%);
}

/* remove open down when nav toggle clicked */
body:not([data-nav="true"])[data-button-clicked="true"] #nav-toggle > .openDown {
    display: none;
}

/* Change navigation toggle color when nav toggled */
body[data-nav="true"] > #nav-toggle {
    background-color: rgba(85, 130, 149, .8);
}

/* Change navigation toggle color when nav toggled */
body[data-button-clicked="true"] > #nav-toggle {
    background-color: rgba(255, 255, 255, .8);
}


/* NAV CHANGES */

/* --- Nav Toggled */
/* Background up */
body[data-nav="true"]:not([data-button-clicked="true"]) > main {
    transform: translateY(-33%);
}

/* Nav links up */
body[data-nav="true"]:not([data-button-clicked="true"]) > nav > #nav-links {
    /* Calculate the translateY value based on the main translateY value */
    transform: translateY(0) scale(1);
}

/* --- Button Clicked */
/* Background up off the page */
body[data-nav="true"][data-button-clicked="true"] > main {
    transform: translateY(-100vh) scale(1);
    transition: transform 800ms ease-out;
}

/* Nav links up off the page*/
body[data-nav="true"][data-button-clicked="true"] > nav > #nav-links {
    transform: translateY(-100vh) scale(1);
    transition: transform 800ms ease-out;

}

/* Nav toggle up to top of page */
body[data-nav="true"][data-button-clicked="true"] > #nav-toggle {
    transform: translateX(-50%) translateY(-90vh) scale(1);
    transition: transform 1100ms cubic-bezier(.83, .3, .38, .97);
}

/* Show the image track when a button is clicked */
body[data-button-clicked="true"] > .image-track {
    bottom: 0%;
    transform: translateY(-50%);
}


/* --- Nav Toggled Again*/

/* Nav links down */
body:not([data-nav="true"])[data-button-clicked="true"] > #nav-toggle {
    transform: translateX(-50%) translateY(-71vh) scale(1);
    transition: transform 900ms cubic-bezier(.13, .53, .38, .97);
}

body:not([data-nav="true"])[data-button-clicked="true"] > main {
    transform: translateY(-100vh) scale(1);
    transition: transform 800ms cubic-bezier(.83, .3, .38, .97);
}

body:not([data-nav="true"])[data-button-clicked="true"] > nav > #nav-links {
    transform: translateY(-78vh) scale(1);
    transition: transform 800ms cubic-bezier(.83, .3, .38, .97);
}

